flipdown pill counter

--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@rumess/react-flip-countdown": "^1.2.6",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flip-countdown-example": "file:example",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
