gh-pages update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "All-Health",
-  "homepage": "http://onTheFritzz.github.io/All-Health-Ionic-App"
+  "homepage": "http://www.onthefritzz.com/All-Health-Ionic-App/"
   "private": true,
   "version": "0.0.1",
   "type": "module",
