--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "All-Health",
-  "homepage": "http://www.onthefritzz.com/All-Health-Ionic-App/"
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -11,9 +10,7 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint": "eslint"
   },
   "dependencies": {
     "@capacitor/android": "5.2.2",
