--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "vite": "4.4.9",
     "vitest": "^0.32.2"
   },
   "description": "Several Tools for Monitoring Fitness, Financial and Physical Health."
