--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "All-Health",
-  "private": true,
+  "homepage": "http://www.onthefritzz.com/All-Health-Ionic-App/",
+  "private": false,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
@@ -10,7 +11,9 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@capacitor/android": "5.2.2",
@@ -24,6 +27,7 @@
     "@rumess/react-flip-countdown": "^1.2.6",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^6.0.0",
     "ionicons": "^7.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
