--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint"
   },
   "dependencies": {
     "@capacitor/android": "5.2.2",
@@ -27,7 +25,6 @@
     "@rumess/react-flip-countdown": "^1.2.6",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "gh-pages": "^6.0.0",
     "ionicons": "^7.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
