--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "5.2.2",
-    "@ionic/cli": "7.1.1",
+    "@ionic/cli": "^6.18.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -43,9 +43,10 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
-    "cypress": "^12.7.0",
+    "cypress": "^13.1.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^6.0.0",
     "jsdom": "^22.1.0",
     "typescript": "^5.1.6",
     "vite": "4.4.9",
